--- a/loginpage.html
+++ b/loginpage.html
@@ -1,11 +1,11 @@
 
-<!doctype html>
+
 <html>
 <head>
 
 </head>
 <body>
-<form align="center" >
+<form textalign="center" >
 <h1>Login</h1>
 <hr><label>E-mail:</label>
 <input type="text"><br><br>
