--- a/Registration.html
+++ b/Registration.html
@@ -1,33 +1,28 @@
 <html>
-<head>
+    <head>
 
-</head>
-<body>
-    <h1>Registration</h1>
-    <table>
-        <tr>
-            <th>username:</th>
-            <td><input type="text" placeholder="username" required=""></td>
-        </tr>
-        <tr>
-        <th>Password:</th>
-            <td><input type="password" placeholder="password" required=""></td>
-        </tr>
-        <tr>
-            <th>Confirmpassword:</th>
-            <td><input type="password" placeholder="confirmpassword" required=""></td>
-            </tr>
-            <tr>
-                <th>Mobile number:</th>
-                <td><input type="mobile number" placeholder="Mobile number" maxlength=10 required=""></td>
-            </tr>
-            <tr>
-                <th>G-mail</th>
-                <td><input type="text" placeholder="gmail" required=""></td>
-            </tr>
-            <tr>
-              <td> <input type="button" value="submit"></td>
-            </tr>
-        </table>
-</body>
+    </head>
+    <body>
+        <select id="city" onchange="places()">
+            <option value="Hyderabad">Hyderabad</option>
+            <option value="secunderbad">secunderbad</option>
+            <option value="cheenai">cheenai</option>
+            <option value="Ap">Ap</option>
+        </select>
+        <h1 id="cityinfo"></h1>
+        <script>
+            places();
+        function places(){
+            
+            var city=document.getElementById("city").value;   
+        
+        switch(city){
+         case "Hyderabad":document.getElementById("cityinfo").innerHTML="charminar,bila temple"; break;
+         case "secunderbad":document.getElementById("cityinfo").innerHTML="malls, temple"; break;
+         case "cheenai":document.getElementById("cityinfo").innerHTML="beach, temple"; break;
+         case "Ap":document.getElementById("cityinfo").innerHTML="malls, temple"; break;
+        }
+        }
+        </script>
+    </body>
 </html>
