--- a/asd.html
+++ b/asd.html
@@ -114,19 +114,19 @@ var products = [{
 {
     pname: "Raymond Men Slim Fit Solid Spread Collar Formal Shirt",
     imageUrl:"https://rukminim1.flixcart.com/image/660/792/k55n0y80/shirt/x/r/f/40-rmsz09861-b6-raymond-original-imafnujxmrpvx9py.jpeg?q=50",
-    price:"₹4699",
+    price:4699,
     rating:" 5.0*"
 },
 {
     pname: "Rk Brand  Printed Men Blue Regular Shorts",
     imageUrl:"https://rukminim1.flixcart.com/image/880/1056/kdga1zk0/short/g/8/y/xl-tnvshortabs1-tripr-original-imafuccyk5tp66gb.jpeg?q=50",
-    price:"₹899",
+    price:899,
     rating:" 4.1 *"
 },
 {
     pname: "Mimosa Woven Kanjivaram Art Silk Saree  (Red, Gold)",
     imageUrl:"https://rukminim1.flixcart.com/image/660/792/sari/g/k/3/1-1-3299-224-cku-mrn-mimosa-original-imaehmzgpybacve9.jpeg?q=50",
-    price:"₹4599",
+    price:4599,
     rating:" 4.8*"
 }
 ]
@@ -151,13 +151,13 @@ var con = document.getElementById('container');
 
 <body onload="insertOption()";>
     <div class="con">
-        <h1><b  style="font-size:46px">RK Shoping Mall</b></h1>
+        <h1><b  style="font-size:46px">sai Shoping Mall</b></h1>
     </div>
     <div class="row"  id="container">
     
 </div>
 <div><footer>
-    <h2>This site Developed By <span style="color:rgb(255, 159, 6); font-size:40px">RK Tech Solutions</span> Pvt Lmt Com </h2>
+    <h2>This site Developed By <span style="color:rgb(255, 159, 6); font-size:40px">sai</span> Pvt.Lmt.Com </h2>
 </footer></div>
     </body>
 </html>
