--- a/8.html
+++ b/8.html
@@ -12,18 +12,21 @@
         function validate(){
          var username=document.getElementById("user").value;
          var password=document.getElementById("pass").value;
-         if(username == "sai" && password == "zxcvbnm"){
-             alert("login");
+
+         if(username !="sai"){
+             alert("username is invalid");
+         }
+         if(password !="sai"){
+             alert("password is invalid");
+         }
+        else if(username == "sai" && password == "sai"){
+             alert("login success");
          }else{
-             alert("login fail")
+             alert("login fail");
          }
-         if(username != "sai"){
-             alert("username is incorrect");
-         }
-         if(password != "zxcvbnm"){
-             alert("password is incorrect");
-         }
-        }
+        
+        
+    }
     </script>
     </body>
 </html>
